<resources>
    <string name="app_name">Zenith</string>
    <string name="title_config">Configuration</string>
    <string name="title_saved">Saved</string>
    <string name="title_logs">Logs</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>

    <string-array name="logic_types">
        <item>ANY</item>
        <item>ALL</item>
    </string-array>

    <string-array name="delete_methods">
        <item>Swipe Left to Delete</item>
        <item>Show Delete Button</item>
    </string-array>

    <string-array name="trigger_types">
        <item>Select a Trigger...</item>
        <item>Time of Day</item>
        <item>Battery Below 20%</item>
        <item>Power Connected</item>
        <item>Screen Turned On</item>
        <item>Screen Turned Off</item>
        <item>WiFi Connected</item>
        <item>Battery Fully Charged</item>
        <item>Headphones Connected</item>
        <item>Airplane Mode Enabled</item>
    </string-array>

    <string-array name="action_types">
        <item>Select an Action...</item>
        <item>Show Notification</item>
        <item>Play Sound</item>
        <item>Vibrate Phone</item>
        <item>Turn on Flashlight</item>
        <item>Turn off Flashlight</item>
        <item>Toggle WiFi</item>
        <item>Set Volume: Max</item>
        <item>Set Volume: Silent</item>
        <item>Toggle Bluetooth</item>
        <item>Speak Text</item>
        <item>Open App</item>
    </string-array>

    <string-array name="theme_options">
        <item>Glassmorphic Dark</item>
        <item>Amoled Black</item>
        <item>Ocean Deep</item>
        <item>Sunset Glow</item>
    </string-array>

    <string-array name="retention_options">
        <item>7 Days</item>
        <item>14 Days</item>
        <item>30 Days</item>
        <item>Forever</item>
    </string-array>
    <string-array name="font_family_options">
        <item>Default (Sans Serif)</item>
        <item>Classic (Serif)</item>
        <item>Code (Monospace)</item>
        <item>Compact (Condensed)</item>
        <item>Playful (Cursive)</item>
    </string-array>

</resources>