<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_config"
        android:icon="@android:drawable/ic_menu_edit"
        android:title="@string/title_config" />
    <item
        android:id="@+id/navigation_saved"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/title_saved" />
    <item
        android:id="@+id/navigation_logs"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/title_logs" />
    <item
        android:id="@+id/navigation_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/title_settings" />
    <item
        android:id="@+id/navigation_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/title_about" />
</menu>
